1.5.3:
    Added uptime facts

    Fixed autotest on win32

    Fixed #1870 - Added interface support for Darwin

    Fixed #1791 - support for virtual fact on Solaris 10

    Fixed #1793 - Added more Solaris 10 facts

    Fixed errors on unrecognised option in binary

    Added ci namespace and Rake tasks

    Fixed #1650 - OS X package creation script should be more selective 
    about cleaning out prior versions

    Added Ubuntu to a variety of confines

    Fixed #1619 - Applying patch by seanmil, adding support for SLES.
    
    Fixed #1634 - Update virtual fact to differentiate OpenVZ 
    hardware nodes and virtual environments

    Fixed #1509 - Fixed version recognition for SLES.

    Fixes #1582 - Fix MAC address reporting for Linux bonding 
    slave interfaces

    Fixed #1575 - CentOS fix for Facter SPEC file

    Fixed #1569 - createpackage.sh bug

    Fixed #1567 - createpackage.sh output

    Fixed #1547 - finally killed dots in IP address facts

1.5.2:
    Fixed #1562 - Removed facter from PREREQS

    Fixed #1558 - Updated virtual fact for xenu and xen0

    Fixed #1555 - Ddded operatingsystemrelease for Solaris

    Fixed #1559 - Update to dmidecode fact

1.5.1:
    Added a Process.waitall thread when there's a timeout, to avoid zombies.

    Set the timeout the host-based and resolve-based resolutions to 2.

    Fixed #1495 - CentOS version detection is now better.

    Fixed #1422 - Facter now defaults to 0 timeout.

    Fixes #1492 - added kernelversion fact

    Added virtual fact

    Modified the operatingsystem fact for Debian so it looks in
    /etc/debian_version instead of /proc/version.

    Fixes #1467 - macaddress not set on Ubuntu

    Adding a rake task for creating an archive.

    Adding better SuSE detection for both operatingsystem and release.

    Add sample test and strawman solution for IP parsing code

    Add module level tests for Facter::IPAddress

    Fixed #1425 - Solaris
